--- a/styles/base.css
+++ b/styles/base.css
@@ -143,6 +143,10 @@ h3 {
     margin: 100px 10px 50px 10px;
 }
 
+.webdev li a {
+    padding: 0.5rem;
+}
+
 #cite {
     font-style: italic;
     font-size: 1.2rem;
